--- a/es/index.html
+++ b/es/index.html
@@ -282,8 +282,8 @@
   color: #859900;
 }
     </style>
-    <link href="../stylesheets/screen-c9d8fa83.css" rel="stylesheet" media="screen" />
-    <link href="../stylesheets/print-953e3353.css" rel="stylesheet" media="print" />
+    <link href="../stylesheets/screen-9bd0ce08.css" rel="stylesheet" media="screen" />
+    <link href="../stylesheets/print-f127ecdf.css" rel="stylesheet" media="print" />
       <script src="../javascripts/all-a9fde460.js"></script>
 
     <script>
@@ -291,7 +291,7 @@
     </script>
   </head>
 
-  <body class="en en_index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
+  <body class="es es_index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -336,7 +336,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li>t(:title)</li>
+            <li><%= t(:title) %></li>
             <li><a href='#'>Sign Up for a Developer Key</a></li>
             <li><a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a></li>
         </ul>
@@ -345,6 +345,8 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='introduction'>Introduction</h1>
+<p>Documentación Factoro</p>
+
 <p>Welcome to the Kittn API! You can use our API to access Kittn API endpoints, which can get information on various cats, kittens, and breeds in our database.</p>
 
 <p>We have language bindings in Shell, Ruby, Python, and JavaScript! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
