--- a/es/index.html
+++ b/es/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta
+            name="description"
+            content="Documentation for the Kittn API"
+        >
     <title>t(:title)</title>
 
     <style media="screen">
@@ -282,9 +286,9 @@
   color: #859900;
 }
     </style>
-    <link href="../stylesheets/screen-9bd0ce08.css" rel="stylesheet" media="screen" />
+    <link href="../stylesheets/screen-58b48ab2.css" rel="stylesheet" media="screen" />
     <link href="../stylesheets/print-f127ecdf.css" rel="stylesheet" media="print" />
-      <script src="../javascripts/all-a9fde460.js"></script>
+      <script src="../javascripts/all-b12a2749.js"></script>
 
     <script>
       $(function() { setupCodeCopy(); });
