publish: Adds new logo. Adds tag styling
generated from commit 76c8eafc12fe020a06b5a72cfd864bee961b5bc9

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   color: #859900;
 }
     </style>
-    <link href="stylesheets/screen-58b48ab2.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/screen-3fde5b85.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print-f127ecdf.css" rel="stylesheet" media="print" />
       <script src="javascripts/all-b12a2749.js"></script>
 
@@ -299,7 +299,7 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-1e815a84.png" class="logo" alt="" />
+      <img src="images/logo-cae72edf.png" class="logo" alt="" />
         <div class="lang-selector">
               <a href="#" data-language-name="shell">cURL</a>
               <a href="#" data-language-name="ruby">Ruby</a>
@@ -383,7 +383,7 @@ curl <span class="s2">"https://api.factoro.mx/v1"</span> <span class="se">\</spa
 
 <p>Factoro uses API keys to allow access to the API. As an administrator, you can get your API key in your <a href="https://app.factoro.mx/bank/settings">settings page</a>.</p>
 
-<p>`Authorization: Bearer ${token}</p>
+<p><code>Authorization: Bearer ${token}</code></p>
 
 <aside class="notice">
 You must replace <code>${token}</code> with your personal API key.
