publish: Adds favicon
generated from commit ef726db1754b768a8dc978a7f3d9100b1e75a3ab

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Factoro API</title>
+    <link href="images/favicon-516f6651.ico" rel="icon" type="image/ico" />
 
     <style media="screen">
       .highlight table td { padding: 5px; }
