--- a/es/index.html
+++ b/es/index.html
@@ -10,6 +10,7 @@
             content="Documentation for the Kittn API"
         >
     <title>t(:title)</title>
+    <link href="../images/favicon-516f6651.ico" rel="icon" type="image/ico" />
 
     <style media="screen">
       .highlight table td { padding: 5px; }
