deploy: edf10be0f009f9e269d02cd6825f0ac38791a8aa

--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
             <a href="#about-this-api" class="toc-h1 toc-link" data-title="About this API">About this API</a>
           </li>
           <li>
+            <a href="#sandbox" class="toc-h1 toc-link" data-title="Sandbox">Sandbox</a>
+          </li>
+          <li>
             <a href="#authentication" class="toc-h1 toc-link" data-title="Authentication">Authentication</a>
           </li>
           <li>
@@ -444,6 +447,10 @@ in each instruction will receive and email with the corresponding information.
 Each action that does, will have it in the description.</p>
 
 <p>We broke down information result into Models, to maintain a simpler and cleaner looking documentation. You can see our models <a class="link" href="#models">here</a>.</p>
+<h1 id='sandbox'>Sandbox</h1>
+<p>The endpoints are the same in both Sandbox and Production environments. The only thing that changes is the base URI.</p>
+
+<p>To use the API in Sandbox mode, replace the base url with <code>https://sandbox-api.factoro.mx</code>.</p>
 <h1 id='authentication'>Authentication</h1>
 <blockquote>
 <p>To authorize, use this code:</p>
